# ChangeLog for dev-libs/slib
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/slib/ChangeLog,v 1.18 2006/10/02 21:56:38 gustavoz Exp $

  02 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> slib-2.4.6.ebuild:
  Stable on sparc wrt #88251

  28 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> slib-2.4.6.ebuild:
  Stable on x86 wrt bug #88251.

  28 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> slib-2.4.2.ebuild,
  slib-2.4.3.ebuild, slib-2.4.6.ebuild, slib-3.1.1.ebuild:
  2.4.6 ppc stable, restrict tests

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> slib-2.4.6.ebuild:
  Mark 2.4.6 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> slib-2.4.6.ebuild,
  slib-3.1.1.ebuild:
  add ~ia64

*slib-3.1.1 (21 Feb 2004)

  21 Feb 2004; Jason Wever <weeve@gentoo.org> slib-3.1.1.ebuild:
  Marked slib-3.1.1 masked on x86.  see bug #41983 for more info.

  16 Feb 2004; Jason Wever <weeve@gentoo.org> :
  Version bump, resolves bug #40727.

  09 Feb 2004; Dylan Carlson <absinthe@gentoo.org> slib-2.4.6.ebuild:
  added amd64 keyword.

  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> slib-2.4.3.ebuild,
  slib-2.4.6.ebuild:
  stable on alpha

*slib-2.4.6 (07 Sep 2003)

  07 Sep 2003; Jason Wever <weeve@gentoo.org> slib-2.4.6.ebuild:
  Version bump.  Fixes bug #26482.

  24 Jul 2003; Tavis Ormandy <taviso@gentoo.org> slib-2.4.3.ebuild:
  marking ~alpha

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*slib-2.4.3 (16 Mar 2002)

  25 Mar 2003; Jason Wever <weeve@gentoo.org> slib-2.4.3.ebuild:
  Updated ebuild and digest to reflect new version as the old one is no longer
  available for download.

*slib-2.4.2 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the