@@ -1,16 +1,24 @@
 DIST slib2d6.zip 793668 RMD160 f1520a98646675a10a0d17853cbbf7bf03d3f3df SHA1 402f7997a3d7ee72fa5c356487daef8420162338 SHA256 88ab2636b40f50e933696981b8a49b245ddee1addd111f0e1921d19d2ca14de5
-EBUILD slib-2.4.6.ebuild 921 RMD160 48ef7b9c6758440f2695bc866d1ab051bd2ee400 SHA1 1db64e077d274013c884d0cc16ff7070cf57eedb SHA256 7dcebfa3935d33883f5f30fe566acc3579e5380c99a462e426baada3b2908774
-MD5 a0d1a4ac4522acb89ae468440ee1ee6f slib-2.4.6.ebuild 921
-RMD160 48ef7b9c6758440f2695bc866d1ab051bd2ee400 slib-2.4.6.ebuild 921
-SHA256 7dcebfa3935d33883f5f30fe566acc3579e5380c99a462e426baada3b2908774 slib-2.4.6.ebuild 921
-MISC ChangeLog 2181 RMD160 d4b9bfc416dd4d8fddedf97363cf2676d9d4d92b SHA1 9982c872697795d5a32aad80ed8602eff5c48989 SHA256 b2eca339794a5b635fc886c39b86a8a55cc8ad5c07476ccb55cd7e7d549e5e38
-MD5 660cb0022b36a37aea6421f3047a953c ChangeLog 2181
-RMD160 d4b9bfc416dd4d8fddedf97363cf2676d9d4d92b ChangeLog 2181
-SHA256 b2eca339794a5b635fc886c39b86a8a55cc8ad5c07476ccb55cd7e7d549e5e38 ChangeLog 2181
-MISC metadata.xml 210 RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 SHA1 efa00493ddec7289a21bc4cbcc6e95ec4de749d5 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39
-MD5 c667f921ee8d48ce17ebef0f8d601ea4 metadata.xml 210
-RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 metadata.xml 210
-SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 metadata.xml 210
+DIST slib3a1.zip 861953 RMD160 9058c89d0da0231bdf06be084e316fb73f456f28 SHA1 8cedb61df26094060bd2f691ded7d03004238e06 SHA256 8a41bb6c726a2ff79579289ce20dc085171100050466f8ec7aa4ecd3348f3ae0
+EBUILD slib-2.4.6.ebuild 930 RMD160 51c20cbe9b23b80c28814d3912591b95674c0c44 SHA1 3ab5f9c4a74c10627d8bf49e5ae634c633d43a7b SHA256 c94b56f73fbd5d185aaa358c1c22f70d55c14854a0f9ae93cd13633a9c5bc986
+MD5 5ca89aab7521994e7c996cf338199231 slib-2.4.6.ebuild 930
+RMD160 51c20cbe9b23b80c28814d3912591b95674c0c44 slib-2.4.6.ebuild 930
+SHA256 c94b56f73fbd5d185aaa358c1c22f70d55c14854a0f9ae93cd13633a9c5bc986 slib-2.4.6.ebuild 930
+EBUILD slib-3.1.1.ebuild 929 RMD160 9ecd46e38a0a650080b9d64208a45cb4d2799a39 SHA1 6ecb1d7779820591896013d3a4aaaf50b9aaf4e1 SHA256 44a283353e52cc0a5167dc847c718f9cfaf53f2159fdf280276e5f9858c7d6b2
+MD5 c045e74cfcbf82e6ac97411c6b0e6b85 slib-3.1.1.ebuild 929
+RMD160 9ecd46e38a0a650080b9d64208a45cb4d2799a39 slib-3.1.1.ebuild 929
+SHA256 44a283353e52cc0a5167dc847c718f9cfaf53f2159fdf280276e5f9858c7d6b2 slib-3.1.1.ebuild 929
+MISC ChangeLog 2352 RMD160 ad0b87ed34e4a2c01160b5e72708da5eff284ff3 SHA1 eb2fc3e191c3338e854cb043177b954e4fed28c8 SHA256 5927a0b2989805ef31be9b7f4110388b93e67cb46001fdaf3c9133470b1e1194
+MD5 9ff3bf41fb5cfe7a40eaa389ef31e004 ChangeLog 2352
+RMD160 ad0b87ed34e4a2c01160b5e72708da5eff284ff3 ChangeLog 2352
+SHA256 5927a0b2989805ef31be9b7f4110388b93e67cb46001fdaf3c9133470b1e1194 ChangeLog 2352
+MISC metadata.xml 159 RMD160 de517ce4d7d6fd637855d92a257e2c94b8339f43 SHA1 f037b0d8dd3d592d04170d21a1a9b9c594541612 SHA256 61c7b86c8f64d194ff9e03f62b4007e0c69db2054d09e3ccdbbf6dbc0c78024b
+MD5 50b0f9698722324cfb463e8cb165fc87 metadata.xml 159
+RMD160 de517ce4d7d6fd637855d92a257e2c94b8339f43 metadata.xml 159
+SHA256 61c7b86c8f64d194ff9e03f62b4007e0c69db2054d09e3ccdbbf6dbc0c78024b metadata.xml 159
 MD5 87e4985662929a5baefeb96124f72094 files/digest-slib-2.4.6 214
 RMD160 ecde510514072c3dfc0eada269f9d8b824afba89 files/digest-slib-2.4.6 214
 SHA256 221438a08e1ad9e69f8f85f4b3eb2ed1832229d8e57643bba974afa181e3a64a files/digest-slib-2.4.6 214
+MD5 7b0d9206c727a335c91720bb6ef4e08c files/digest-slib-3.1.1 214
+RMD160 03a35b52a74a9f2f8fb8619331f538423dcee85d files/digest-slib-3.1.1 214
+SHA256 3b14bb4e98cb894ca3dcffee07eb32f31a83fa86deee561c699e04401e584161 files/digest-slib-3.1.1 214
