@@ -1,0 +1,3 @@
+MD5 a8805700c4c49d48a14fc8a0c2b996f4 slib3a1.zip 861953
+RMD160 9058c89d0da0231bdf06be084e316fb73f456f28 slib3a1.zip 861953
+SHA256 8a41bb6c726a2ff79579289ce20dc085171100050466f8ec7aa4ecd3348f3ae0 slib3a1.zip 861953
