@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/slib
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/slib/ChangeLog,v 1.18 2006/10/02 21:56:38 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/slib/ChangeLog,v 1.19 2006/12/18 18:17:48 masterdriverz Exp $
+
+  18 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
+  slib-2.4.2.ebuild, slib-2.4.3.ebuild, slib-2.4.6.ebuild,
+  slib-3.1.1.ebuild:
+  Fix SRC_URI; bug 150849
 
   02 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> slib-2.4.6.ebuild:
   Stable on sparc wrt #88251
